@@ -74,6 +74,12 @@ BUG FIXES IN 1.10
 IMPROVEMENTS AND NEW FEATURES IN 1.10
 =====================================
 
+* [CONFIGURATION-534] PropertyConfiguration's handling of includes depends on the
+                      existence of a base path
+
+  The includesAllowed property of PropertyConfiguration is now independent
+  from the existence of a base path.
+
 * [CONFIGURATION-550] Missing conversion to char
 
   Conversion to Character is now supported.
